@@ -6,6 +6,8 @@ Imager release history.  Older releases can be found in Changes.old
 
  - allow building JPEG/imexif.c on C89 compilers.
 
+ - allow building GIF/imgif.c on C89 compilers.
+
 Imager 0.91 - 4 Jun 2012
 ===========
 
